# docker-compose-pytest-playwright-staticpress2019

./: README.md  compose.test.yml
.devcontainer/: compose.yml
playwright/: CLAUDE.md  MIGRATION_COMPLETE.md  MIGRATION_TO_PYTHON.md  activate_plugin.py  check_plugins.py  check_users.py  check_wp_status.py  cleanup_typescript.sh  conftest.py  conftest_unit.py  deactivate_plugin.py  debug_menu.py  pyproject.toml  reset_password.py  test_database_layer.py  test_page_objects.py  test_phase5_fixtures.py  test_phase6_main_test.py  test_routine_operation.py  test_wp_without_plugin.py
playwright/.claude/: settings.json
playwright/testlibraries/: __init__.py  config.py  fixture_loader.py  routine_operation.py  table_cleaner.py
playwright/testlibraries/entities/: __init__.py  wp_option.py  wp_post.py  wp_user.py
playwright/testlibraries/fixtures/: WpOptionsStaticPress2019.yml
playwright/testlibraries/pages/: __init__.py  page_admin.py  page_language_chooser.py  page_login.py  page_plugins.py  page_staticpress.py  page_staticpress_options.py  page_welcome.py
playwright/tests/: __init__.py  test_all.py  test_fixtures.py  test_setup.py
wordpress-basic-authentication/: Dockerfile  docker-entrypoint.sh
